# Psychology-Pose-Estimation

./: .THANOS Documentation.pdf.icloud  .gitignore  Jarv3D GUI.lnk  README.md  activate_venv.bat  bin_to_csv.py  calc_accuracy.py  create_files.py  fecg.py  file_stuff_testing.py  iphone_mat_to_csv.py  iphone_npz_to_csv.py  iphone_phase_one.py  iphone_rgbd_phase_one.py  main.cpp  main.py  mat_to_csv.py  plot_rgb_frame.py  ply_reading.py  pose_module.py  rename_clips.py  requirements.txt  rgbd_phase_one.py  run.py  test.txt  test_openCV.py  test_openCV_MULTIPROCESSING.py  test_v2n.py  testing.py  testing_depths.py  testing_multiprocessing.py  testing_world_landmarks.py  thanos_phase_one.py
Data/: .510750_106018_1-8-24_P1_3_3_solo_happiness_F_23.mat.icloud  .510750_106018_1-8-24_P1_9_9_solo_disappointment_F_23.mat.icloud  .965142_106018_1-8-24_P1_1_21_solo_baseline_F_23.mat.icloud  .965142_106018_1-8-24_P1_2_22_solo_baseline_F_23.mat.icloud  .965142_106018_1-8-24_P1_3_23_solo_disappointment_F_23.mat.icloud  .965142_106018_1-8-24_P1_4_24_solo_disappointment_F_23.mat.icloud
Data/mat/: calibration.m  intensity_mean.m  testing.m
Data/mat/dyad_2/: .279896_1-8-24_P2_07_47_joint_happiness.mat.icloud  .527471_279896_1-8-24_P2_7_37_solo_shame_F_28.mat.icloud
Data/skvs/bins/: pose_data.csv  pose_data_left.csv  pose_data_right.csv  visualize_xy.m
Sony Documentation/API_C++_Project_skeleton/: cmakelists.txt  open_source_software_licenses.txt
Sony Documentation/API_C++_Project_skeleton/cmake/: Findvitalslib.cmake
Sony Documentation/API_C++_Project_skeleton/config/: vitalslib.config.xml
Sony Documentation/API_C++_Project_skeleton/samples/vitalslib_sample/: CMakeLists.txt  main.cpp  vitalslib_sample.cpp  vitalslib_sample.h
Sony Documentation/API_C++_Project_skeleton/scripts/: build.py
Sony Documentation/API_C++_Project_skeleton/tests/: CMakeLists.txt  main.cpp  test_example.cpp
Sony Documentation/API_C++_Project_skeleton/vitalslib_lib/: CMakeLists.txt  version.h  vitalslib_api.cpp  vitalslib_api.h  vitalslib_platform.h  vitalslib_types.h
Sony Documentation/API_C++_Project_skeleton/vitalslib_lib/core/: pipeline.h
extra_files/: thanos_data_collection.py
jarv3d 1.7.0/: LICENSE.txt
jarv3d 1.7.0/Anims/: Pan  Tilt
jarv3d 1.7.0/Records/FaceID/: isp_ambient.pfm  isp_amplitude.pfm  isp_confidence.pfm  isp_depth.pgm
jarv3d 1.7.0/Records/FaceID_sunglasses/: isp_ambient.pfm  isp_amplitude.pfm  isp_confidence.pfm  isp_depth.pgm
jarv3d 1.7.0/Records/Fox_and_car_specular/: isp_ambient.pfm  isp_amplitude.pfm  isp_confidence.pfm  isp_depth.pgm
jarv3d 1.7.0/Records/Rabbits/: isp_ambient.pfm  isp_amplitude.pfm  isp_confidence.pfm  isp_depth.pgm
jarv3d 1.7.0/Records/Spaghetti/: isp_ambient.pfm  isp_amplitude.pfm  isp_confidence.pfm  isp_depth.pgm
jarv3d 1.7.0/Records/Typical_scene/: isp_ambient.pfm  isp_amplitude.pfm  isp_confidence.pfm  isp_depth.pgm
jarv3d 1.7.0/Records/Typical_scene2/: isp_ambient.pfm  isp_amplitude.pfm  isp_confidence.pfm  isp_depth.pgm
jarv3d 1.7.0/Resources/calibration/: 0FA0_20W49.4-01A.006_0x31410510134a800b000000fd1431043031410006.json  0FA1_21W28.2-00A.035_0x314114501646200b000000f4151c023030410023.json  0FB0_21W05.1-00A.006_0x31410510134a800a000000fc1505013030410006.json  0FB0_21W05.1-00A.007_0x31410510134a80090000000e1505013030410007.json  0FB0_21W05.1-00A.008_0x31410510134a800b000000071505013030410008.json  0FB0_21W05.1-00A.010_0x31410510134a800b00000009150501303041000a.json  0FB0_21W05.1-00A.011_0x31410510134a800d000000f9150501303041000b.json  0FB0_21W05.1-00A.015_0x31410510134a800b000000f9150501303041000f.json  0FB0_21W25.1-00A.005_0x31410510134a800d000000091519013030410005.json  0FB1_21W26.5-00A.016_0x3141145016462009000000fa151a053030410010.json  0FB1_21W28.2-00A.013_0x31410510134a800a0000000e150501303041000d.json  0FB1_21W28.2-00A.027_0x314114501646200d000000f6151c02303041001b.json  0FB1_21W28.2-00A.028_0x31411450164620090000000a151c02303041001c.json  0FB1_21W28.2-00A.029_0x314114501646200d0000000a151c02303041001d.json  0FB1_21W28.2-00A.030_0x314114501646200d00000006151c02303041001e.json  0FB1_21W28.2-00A.031_0x314114501646200900000006151c02303041001f.json  0FB1_21W28.2-00A.032_0x314114501646200a000000fc151c023030410020.json  0FB1_21W28.2-00A.033_0x314114501646200900000008151c023030410021.json  0FB1_21W28.2-00A.034_0x314114501646200b000000f6151c023030410022.json  0FB1_21W28.4-00A.036_0x314114501646200900000009151c043030410024.json  0FB1_21W28.4-00A.037_0x314114501646200b00000007151c043030410025.json  0FB1_21W28.4-00A.038_0x314114501646200a00000000151c043030410026.json  0FB1_21W28.4-00A.040_0x314114501646200c0000000c151c043030410028.json  0FB1_21W28.4-00A.041_0x314114501646200b000000f5151c043030410029.json  0FB1_21W30.1-00A.042_0x314114501646200a000000f2151e01303041002a.json  0FB1_21W33.4-00A.043_0x314114501646200b000000fe152104303041002b.json  0FB1_21W33.4-00A.044_0x314114501646200a00000006152104303041002c.json  0FB1_21W34.5-00A.045_0x314114501646200b00000001152205303041002d.json  0FB1_21W34.5-00A.046_0x31411450164620090000000e152205303041002e.json  0FB1_21W35.3-00A.047_0x314114501646200c000000fe152303303041002f.json  (+82 more)
jarv3d 1.7.0/Resources/maps/: endorV3.ini  (+9 more)
jarv3d 1.7.0/Snapshots/: .snapshot_0.ply.icloud  .snapshot_1.ply.icloud
jarv3d 1.7.0/cl/: isp2_x64  isp2_x86  isp_x64  isp_x86
jarv3d 1.7.0/xssm-samples/: PX_FMT_CODE_3DRAW_6BINS_2xH_YTAPS_RAW12P_2F_W600xH1614_2.pgm  PX_FMT_CODE_3DRAW_6BINS_2xH_YTAPS_RAW12P_2F_W600xH1614_4.pgm  PX_FMT_CODE_3DRAW_6BINS_2xH_YTAPS_RAW12P_2F_W600xH1614_5.pgm  PX_FMT_CODE_3DRAW_6BINS_2xH_YTAPS_RAW12P_3F_W600xH1614_0.pgm  PX_FMT_CODE_3DRAW_6BINS_2xH_YTAPS_RAW12P_3F_W600xH1614_3.pgm  PX_FMT_CODE_3DRAW_6BINS_2xH_YTAPS_RAW12P_3F_W600xH1614_6.pgm  PX_FMT_CODE_3DRAW_6BINS_2xH_YTAPS_RAW12P_3F_W600xH1614_7.pgm  PX_FMT_CODE_3DRAW_6BINS_2xH_YTAPS_RAW12P_3F_W600xH1614_8.pgm  PX_FMT_CODE_3DRAW_6BINS_2xH_YTAPS_RAW12P_W600xH1614_1.pgm
ressources/automotive_suite_recorder_viewer_v0.0.0/: automotive_suite.config.xml  disclaimer.txt
src/: bin_to_csv.py  mat_to_csv.py  openpose.py  pose_module.py  thanos_phase_one.py
(+6 files in other folders)
